force-app/main/default/objects/Prepayment_Distribution__c/Prepayment_Distribution__c.object-meta.xml
<CustomObject>
    <label>Prepayment Distribution</label>
    <nameField>
        <displayFormat>PD-{0000000}</displayFormat>
        <label>Prepayment Distribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prepayment Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>