force-app/main/default/objects/Prepayment_Distribution__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>*Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prepayment Distributions</relationshipLabel>
    <relationshipName>Prepayment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>