force-app/main/default/objects/Prepayment_Distribution__c/fields/Handler_Date__c.field-meta.xml
<CustomField>
    <fullName>Handler_Date__c</fullName>
    <label>Handler Date</label>
    <type>Date</type>
</CustomField>