force-app/main/default/objects/Prepayment_Distribution__c/fields/Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Name__c</fullName>
    <label>Handler Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>