force-app/main/default/objects/Prepayment_Distribution__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please select the order under this prepayment account</errorMessage>
        <filterItems>
            <field>Order.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Prepayment Distributions</relationshipLabel>
    <relationshipName>Prepayment_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>