force-app/main/default/objects/Prepayment_Distribution__c/fields/Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount__c</fullName>
    <formula>Order__r.TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>