force-app/main/default/objects/Prepayment_Distribution__c/fields/Order_Balanced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Balanced_Amount__c</fullName>
    <label>Order Balanced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>