force-app/main/default/objects/Prepayment_Distribution__c/fields/Order_Distributed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Distributed_Amount__c</fullName>
    <label>Order Distributed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>