force-app/main/default/objects/Prepayment_Distribution__c/fields/Order_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_ERP_Number__c</fullName>
    <formula>Order__r.ExternalID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order ERP Number</label>
    <type>Text</type>
</CustomField>