force-app/main/default/objects/Prepayment_Distribution__c/fields/Prepayment__c.field-meta.xml
<CustomField>
    <fullName>Prepayment__c</fullName>
    <label>Prepayment</label>
    <referenceTo>Prepayment__c</referenceTo>
    <relationshipLabel>Prepayment Distributions</relationshipLabel>
    <relationshipName>Prepayment_Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>