force-app/main/default/objects/Prepayment_Distribution__c/fields/Prepayment_Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Distribution_Amount__c</fullName>
    <label>Prepayment Distribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>