force-app/main/default/objects/Prepayment_Distribution__c/validationRules/Amount_can_not_great_than_order_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_can_not_great_than_order_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Order__r.TotalAmount &lt; Prepayment_Distribution_Amount__c</errorConditionFormula>
    <errorDisplayField>Prepayment_Distribution_Amount__c</errorDisplayField>
    <errorMessage>The prepayment distribution amount cannot be greater than the order amount.</errorMessage>
</ValidationRule>