force-app/main/default/objects/Prepayment_Distribution__c/validationRules/Approval_Can_Not_Modify.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Can_Not_Modify</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(Approval_Status__c , &apos;Approved&apos;), 
OR(
 ISCHANGED( Prepayment_Distribution_Amount__c ) ,
 ISCHANGED( Order__c ) 
)
)</errorConditionFormula>
    <errorMessage>This distribution record has been approved and cannot be modified!</errorMessage>
</ValidationRule>