force-app/main/default/objects/Prepayment_Distribution__c/validationRules/Prepayment_Distributed_Balanced_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Prepayment_Distributed_Balanced_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 !ISNULL(Prepayment_Distribution_Amount__c),
 !ISNULL(Order_Balanced_Amount__c),
 Prepayment_Distribution_Amount__c &gt; Order_Balanced_Amount__c  
)</errorConditionFormula>
    <errorMessage>Prepayment Distribution Amount cannot be greater than Order Balanced Amount.</errorMessage>
</ValidationRule>